# REST_Command

./: Cargo.toml  README.md  default.nix
core/: .gitignore  Cargo.toml
core/src/: lib.rs  main.rs
dev/test_commands/script/: run  script.sh
package/: README.md  build.nix  package.sh
package/nix/git/: build.nix
src/: main.rs
